<resources>
    <string name="app_name">Rick &amp; Morty Browsing Characters</string>
    <string name="character_name">Character Name</string>
    <string name="alive">Alive</string>
    <string name="main_characteristics">Main characteristics:</string>
    <string name="specie">Specie:</string>
    <string name="type">Type:</string>
    <string name="gender">Gender:</string>
    <string name="close">CLOSE</string>
    <string name="loading">Loading card details…</string>
    <string name="character_img">Character image</string>
    <string name="location">Location</string>
    <string name="retry">RETRY</string>
    <string name="logo_image">Logo image</string>
</resources>
