<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="18dp"
    app:cardPreventCornerOverlap="false">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/character_name"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/character_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alive"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="6dp"
                android:textSize="14sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgoundGray">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/main_characteristics"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/specie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Headline"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/specie"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/specie_response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Headline"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    android:text=""
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/specie"
                    android:text="@string/type"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/type_response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/specie"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text=""
                    android:textColor="@color/text_gray"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/type"
                    android:text="@string/gender"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/gender_response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/type"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text=""
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gender"
                    android:text="@string/location"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/location_response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gender"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text=""
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"/>
                    <Button
                        android:id="@+id/close_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/location"
                        android:text="@string/close"
                        android:textSize="16sp"
                        android:textColor="@color/text_gray"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="6dp"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>